--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "redux": "^4.0.0"
   },
   "devDependencies": {
+    "babel-core": "^7.0.0-0",
     "babel-jest": "23.6.0",
-    "metro-react-native-babel-preset": "0.46.0",
     "jest": "23.6.0",
+    "metro-react-native-babel-preset": "0.46.0",
     "react-test-renderer": "16.5.0"
   },
   "jest": {
